--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Save Visitors</title>
 </head>
 <body>
     <form action="guestbookController.php" method="POST">
-        <input type="text" name="visitorName" placeholder="Seu nome">
+        <input type="text" name="visitorUser" placeholder="Seu usuário">
         <input type="email" name="visitorEmail" placeholder="E-mail">
-        <input type="submit" value="Assinar livro de visitas">
+        <input type="submit" value="Gravar visitante">
+        <a href="./listVisitors.php?usuario=">Listar visitantes</a>
     </form>
 </body>
 </html>
